fixtures/frontend/milestone-2/invalid/unsupported-pipe-memo-stage/main.aivi
val mapped =
    [1, 2, 3]
     *|> . + 1 #mapped
